# music-tree

./: .gitignore  LICENSE  README.md
music-tree/: CMakeLists.txt  Main.qml  artist.cpp  artist.h  artistservice.cpp  artistservice.h  databasemanager.cpp  databasemanager.h  discogsmanager.cpp  discogsmanager.h  graphviewitem.cpp  graphviewitem.h  main.cpp  resources.qrc  sessionartistmodel.cpp  sessionartistmodel.h  sessionmanager.cpp  sessionmanager.h
music-tree/resources/: schema.sql
